k8s/infra-api/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: infra-api-deployment
  namespace: api
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: infra-api
  template:
    metadata:
      labels:
        app: infra-api
    spec:
      hostNetwork: true
      hostPID: true
      imagePullSecrets:
        - name: harbor-pull-cred
      containers:
        - name: api-container
          image: harbor.192.168.1.16.nip.io/home-infra/infra-api:latest
          ports:
            - containerPort: 8000
          imagePullPolicy: Always
          securityContext:
            privileged: true
          volumeMounts:
            - name: host-root
              mountPath: /host
              readOnly: true
            - name: k3s-config
              mountPath: /etc/rancher/k3s/k3s.yaml
              readOnly: true
      volumes:
        - name: host-root
          hostPath:
            path: /
            type: Directory
        - name: k3s-config
          hostPath:
            path: /etc/rancher/k3s/k3s.yaml
            type: File
