k8s/infra-api/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: infra-api-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: infra-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8000
